feat: add footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
@@ -95,8 +95,12 @@
                 </section>
         </div>
     </main>
-    <footer>
-        <div class="container"></div>
+    <footer class="footer">
+        <div class="container container-footer">
+            <a href="https://github.com/RitaKhor" class="footer-link" target="_blank">GitHub</a>
+            <p class="footer-text">Jule 2024</p>
+            <div class="footer-img"></div>
+        </div>
     </footer>
 </body>
 </html>
