feat: add links, info about me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
             <section class="section" id="summary">
                 <h2 class="section-title">summary</h2>
-                <p>My goal is to become a good frontend developer.</p>
+                <p>Aspiring frontend developer dedicated to crafting modern and intuitive user interfaces.
+                    Responsibility, dedication to self-improvement, and professional growth.
+                    Strong communication skills and ability to collaborate effectively.</p>
                 </section>
 
             <section class="section" id="skills">
@@ -59,8 +61,8 @@
 
             <section class="section" id="code">
                 <h2 class="section-title">code</h2>
-                <code>
-                    const hamburger = document.querySelector(".hamburger"), menu = document.querySelector(".menu"), closeElem = document.querySelector(".menu__close"); 
+                <code class="section-code">
+                    const hamburger = document.querySelector(".hamburger"),<br> menu = document.querySelector(".menu"),<br> closeElem = document.querySelector(".menu__close");<br> 
                     hamburger.addEventListener("click", () =› { menu.classList.add("active"); }); <br>
                     closeElem.addEventListener("click", () =› { menu.classList.remove("active"); });
                 </code>
@@ -68,14 +70,14 @@
 
             <section class="section" id="courses">
                 <h2 class="section-title">courses</h2>
-                <p>RS School: JS/Frontend. Stage 0</p>
+                <a href="https://rs.school/courses/javascript-preschool-ru" target="_blank" class="section-courses">RS School: JS/Frontend. Stage 0</a>
                 </section>
 
             <section class="section" id="projects">
                 <h2 class="section-title">projects</h2>
                 <ul>
-                    <li>https://ritakhor.github.io/</li>
-                    <li>https://ritakhor.github.io/pulse/dist/</li>
+                    <li><a href="https://ritakhor.github.io/" target="_blank" class="section-projects">КОМПАНИЯ UBER PARTNERS!</a></li>
+                    <li><a href="https://ritakhor.github.io/pulse/dist/" target="_blank" class="section-projects">RunSmart</a></li>
                 </ul>
                 </section>
 
@@ -99,7 +101,7 @@
         <div class="container container-footer">
             <a href="https://github.com/RitaKhor" class="footer-link" target="_blank">GitHub</a>
             <p class="footer-text">Jule 2024</p>
-            <div class="footer-img"></div>
+            <a href="https://rs.school/courses/javascript-ru" target="_blank" class="footer-img"></a>
         </div>
     </footer>
 </body>
